--- a/config.json
+++ b/config.json
@@ -1499,6 +1499,267 @@
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_1",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.55",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_1",
+            "detour": "Warp-IR_1",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "162.159.195.55",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_2",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.99.81",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_2",
+            "detour": "Warp-IR_2",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "188.114.99.81",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_3",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.97.82",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_3",
+            "detour": "Warp-IR_3",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "188.114.97.82",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_4",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.159",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_4",
+            "detour": "Warp-IR_4",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "162.159.195.159",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_5",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.99.56",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_5",
+            "detour": "Warp-IR_5",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "188.114.99.56",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_6",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.98.74",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_6",
+            "detour": "Warp-IR_6",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "188.114.98.74",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_7",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.4",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_7",
+            "detour": "Warp-IR_7",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "162.159.195.4",
+            "server_port": 4233,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_8",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.4",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_8",
+            "detour": "Warp-IR_8",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "162.159.195.4",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_9",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.55",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-Main_9",
+            "detour": "Warp-IR_9",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            ],
+            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
+            "server": "162.159.195.55",
+            "server_port": 1180,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "mtu": 1280
         }
     ]
 }
