--- a/config.json
+++ b/config.json
@@ -1,4 +1,54 @@
 {
+    "log": {
+        "disabled": false,
+        "level": "info",
+        "timestamp": true
+    },
+    "dns": {
+        "independent_cache": true,
+        "rules": [],
+        "servers": [
+            {
+                "address": "https://8.8.8.8/dns-query",
+                "address_resolver": "dns-direct",
+                "strategy": "ipv4_only",
+                "tag": "dns-remote"
+            },
+            {
+                "address": "local",
+                "address_resolver": "dns-local",
+                "detour": "direct",
+                "strategy": "ipv4_only",
+                "tag": "dns-direct"
+            },
+            {
+                "address": "local",
+                "detour": "direct",
+                "tag": "dns-local"
+            },
+            {
+                "address": "rcode://success",
+                "tag": "dns-block"
+            }
+        ]
+    },
+    "inbounds": [
+        {
+            "type": "tun",
+            "inet4_address": "172.19.0.1/30",
+            "inet6_address": "fdfe:dcba:9876::1/126",
+            "auto_route": true,
+            "strict_route": true,
+            "stack": "mixed",
+            "sniff": true
+        }
+    ],
+    "experimental": {
+        "cache_file": {
+            "enabled": true,
+            "path": "cache.db"
+        }
+    },
     "outbounds": [
         {
             "type": "wireguard",
@@ -12,24 +62,39 @@
             "server_port": 939,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
+            "mtu": 1280
         },
         {
-            "type": "wireguard",
-            "tag": "Warp-Main",
-            "detour": "Warp-IR",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
+            "tag": "direct",
+            "type": "direct"
+        },
+        {
+            "tag": "block",
+            "type": "block"
+        },
+        {
+            "tag": "dns-out",
+            "type": "dns"
+        },
+        {
+            "tag": "\ud83d\udc9aselect\ud83d\udc9a",
+            "type": "selector",
+            "outbounds": [
+                "\u2764\ufe0fBest Latency\u2764\ufe0f",
+                "Warp-IR",
+                "Warp-IR_1"
+            ]
+        },
+        {
+            "tag": "\u2764\ufe0fBest Latency\u2764\ufe0f",
+            "type": "urltest",
+            "outbounds": [
+                "Warp-IR",
+                "Warp-IR_1"
             ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.96.185",
-            "server_port": 3581,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
+            "url": "https://detectportal.firefox.com/success.txt",
+            "interval": "60s",
+            "tolerance": 0
         },
         {
             "type": "wireguard",
@@ -39,276 +104,49 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.98.133",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_1",
-            "detour": "Warp-IR_1",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.98.133",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_2",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.94",
+            "server": "188.114.98.32",
             "server_port": 8854,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_2",
-            "detour": "Warp-IR_2",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.99.94",
-            "server_port": 8854,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_3",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.192.80",
-            "server_port": 8854,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_3",
-            "detour": "Warp-IR_3",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "162.159.192.80",
-            "server_port": 8854,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_4",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.195.12",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_4",
-            "detour": "Warp-IR_4",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "162.159.195.12",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_5",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.66",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_5",
-            "detour": "Warp-IR_5",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.99.66",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_6",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.138",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_6",
-            "detour": "Warp-IR_6",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.99.138",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_7",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.221",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_7",
-            "detour": "Warp-IR_7",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.99.221",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_8",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.195.195",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_8",
-            "detour": "Warp-IR_8",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "162.159.195.195",
-            "server_port": 928,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-IR_9",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
-            ],
-            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.91",
-            "server_port": 8854,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
-        },
-        {
-            "type": "wireguard",
-            "tag": "Warp-Main_9",
-            "detour": "Warp-IR_9",
-            "local_address": [
-                "172.16.0.2/32",
-                "2606:4700:110:8d34:65ad:a0c4:a92:f790/128"
-            ],
-            "private_key": "sKFNoq7RKGOswUrXKX4b/oEbL31KUD93pGUF4bhgBHM=",
-            "server": "188.114.99.91",
-            "server_port": 8854,
-            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-            "reserved": "AAAA",
-            "mtu": 1280,
-            "fake_packets": "5-10"
+            "mtu": 1280
         }
-    ]
+    ],
+    "route": {
+        "geoip": {
+            "download_url": "https://mirror.ghproxy.com/https://github.com/Ptechgithub/sing-box/blob/main/geo/geoip.db",
+            "download_detour": "\ud83d\udc9aselect\ud83d\udc9a"
+        },
+        "geosite": {
+            "download_url": "https://mirror.ghproxy.com/https://github.com/Ptechgithub/sing-box/blob/main/geo/geosite.db",
+            "download_detour": "\ud83d\udc9aselect\ud83d\udc9a"
+        },
+        "auto_detect_interface": true,
+        "final": "\ud83d\udc9aselect\ud83d\udc9a",
+        "rules": [
+            {
+                "outbound": "dns-out",
+                "protocol": "dns"
+            },
+            {
+                "clash_mode": "Direct",
+                "outbound": "direct"
+            },
+            {
+                "clash_mode": "Global",
+                "outbound": "\ud83d\udc9aselect\ud83d\udc9a"
+            },
+            {
+                "geosite": "ir",
+                "geoip": [
+                    "ir",
+                    "private"
+                ],
+                "outbound": "direct"
+            },
+            {
+                "geosite": "geolocation-!ir",
+                "outbound": "\ud83d\udc9aselect\ud83d\udc9a"
+            }
+        ]
+    }
 }
