--- a/config.json
+++ b/config.json
@@ -62,6 +62,8 @@
             "server_port": 939,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
             "mtu": 1280
         },
         {
@@ -104,10 +106,12 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.98.32",
-            "server_port": 8854,
+            "server": "162.159.192.0",
+            "server_port": 1018,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
             "mtu": 1280
         }
     ],
