--- a/config.json
+++ b/config.json
@@ -106,8 +106,136 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.99.194",
-            "server_port": 7103,
+            "server": "188.114.97.116",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_2",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.97.180",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_3",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.192.46",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_4",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.96.202",
+            "server_port": 928,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_5",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.98.144",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_6",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.98.7",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_7",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.195.251",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_8",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "162.159.192.243",
+            "server_port": 8742,
+            "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "reserved": "AAAA",
+            "domain_strategy": "",
+            "pre_shared_key": "",
+            "mtu": 1280
+        },
+        {
+            "type": "wireguard",
+            "tag": "Warp-IR_9",
+            "local_address": [
+                "172.16.0.2/32",
+                "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
+            ],
+            "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
+            "server": "188.114.97.72",
+            "server_port": 8742,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
